[package]
name = "v5_cli"
description = "Vex V5 robot serial port accessor"
version = "0.1.0"
edition = "2021"

[dependencies]
v5_core = { path = "../core" }
env_logger = "0.10"
tokio = { version = "1.33", features = ["rt-multi-thread"] }

base64 = "0.21"
extendhash = "1"
libdeflater = "0.14"
rust-ini = "0.19.0"
