[package]
name = "v5_cli"
description = "Vex V5 robot serial port accessor"
version = "0.1.0"
edition = "2021"

[dependencies]
v5-serial = { path = "../core" }
clap = "4"
crc = "3"
env_logger = "0.11"
log = "0.4"
time = { version = "0.3", features = ["formatting"] }
tokio = { version = "1.36", features = ["rt-multi-thread", "macros", "io-std", "signal"] }

base64 = "0.21"
extendhash = "1"
libdeflater = "1.19"
rust-ini = "0.20"
corncobs = "0.1.3"
