[package]
name = "v5_core"
description = "Vex V5 robot serial port accessor"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
btleplug = "0.11"
clap = "4"
crc = "3"
log = "0.4"
futures = "0.3"
serde = "1"
thiserror = "1.0"
time = { version = "0.3", features = [ "formatting" ] }
tokio = { version = "1.33", features = ["rt", "io-util"] }
tokio-serial = { version = "5.4", features = ["libudev"] }
uuid = "1.5"
async-recursion = "1.0.5"
