[package]
name = "v5_core"
description = "Vex V5 robot serial port accessor"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
bitflags = "2.4"
btleplug = "0.11"
crc = "3"
log = "0.4"
futures = "0.3"
serde = "1"
thiserror = "1.0"
tokio = { version = "1.33", features = ["io-util"] }
tokio-serial = { version = "5.4", features = ["libudev"] }
uuid = "1.5"
